# openweather-python

./: LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
openweather_python/: __init__.py  client.py  models.py
py-openweathermap/: __init__.py  client.py  constants.py  exceptions.py  models.py
py_openweathermap/: __init__.py  client.py  exceptions.py  models.py
tests/: test_client.py
