[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_openweathermap"
version = "0.1.0"
description = "Python wrapper for OpenWeatherMap API"
authors = [
    {name = "Kevin Kimani", email = "kimanikevin254@gmail.com"}
]
requires-python = ">=3.8"
keywords = ["weather", "api", "openweathermap", "forecast"]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[project.urls]
Homepage = "https://github.com/kimanikevin254/py-openweathermap"
Repository = "https://github.com/kimanikevin254/py-openweathermap"
Issues = "https://github.com/kimanikevin254/py-openweathermap/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=py_openweathermap",
    "--cov-report=term-missing",
]